:pencil2: docs(pm): 점검 연장

--- a/src/pages/pm/2024-11-15/bug-fix.mdx
+++ b/src/pages/pm/2024-11-15/bug-fix.mdx
@@ -1,8 +1,9 @@
 ---
 layout: ../../../layouts/pm.astro
 level: emergency
-pm_time: 2024. 11. 15(금) 오후 9:20 ~ 오후 9:30 (KST, 총 10분)
+pm_time: 2024. 11. 15(금) 오후 9:20 ~ 오후 9:40 (KST, 총 20분 (10분 연장))
 notice_url: https://cafe.naver.com/steamindiegame/18562037
 ---
 
-골든벨 게임 관련 긴급 버그 패치
+골든벨 게임 관련 긴급 버그 패치<br />
+[오후 9:32] 서버 통신 오류 문제가 확인되어 점검이 연장되었습니다. 40분에 종료 예정입니다.
