:pencil2: docs(pm): 종료 시간 추가

--- a/src/pages/pm/2024-11-20/expand.mdx
+++ b/src/pages/pm/2024-11-20/expand.mdx
@@ -1,7 +1,7 @@
 ---
 layout: ../../../layouts/pm.astro
 level: planned
-pm_time: 2024. 11. 20(수) 오후 7:40 ~ 완료 시 까지 (KST)
+pm_time: 2024. 11. 20(수) 오후 7:40 ~ 익일 오전 12:20 (KST)
 notice_url: https://cafe.naver.com/steamindiegame/18603486
 ---
 
